<resources>
    <string name="app_name">SenFit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_birth_date">set Birth date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="postal_code">Postal Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="submit">Submit</string>
    <string name="wait_message">Creating account. Please wait</string>
    <string name="title_activity_covid_survey">CovidSurveyActivity</string>
    <string name="log_success_mssg">Log successfully stored.</string>
    <string name="member_not_found">No such member exists</string>
    <string name="covid_status_positive_mssg">Please stay home and do not attend our gym facilities.</string>
    <string name="covid_form_dialog">Covid-19 Health and safety response</string>
    <string name="default_err_msg">Something went wrong</string>
    <string name="select_training_portfolio">Select a portfolio for Training Plan</string>
    <string name="select_training_gym">Select Training Gym</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_inperson">Inperson Class</string>
    <string name="tab_online">Online Class</string>
    <string name="tab_home">Home</string>
    <string name="un_confirm">un-confirm</string>
    <string name="confirm_statement">I Confirm these results</string>
    <string name="covid_survey">Covid Survey</string>
    <string name="fitness_portfolio">Fitness Portfolio</string>
    <string name="add_fitness_portfolio">Add Fitness Portfolio</string>
    <string name="classes">Classes</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="fitness_classes">Fitness Classes</string>
    <string name="logout">Logout</string>
    <string name="member_name">Member Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="health_concerns">Health concerns</string>
    <string name="see_results">See Results</string>
    <string name="enter_weight_lbs">Enter Weight(lbs)</string>
    <string name="enter_height_cm">Enter Height(cm)</string>
    <string name="enter_health_concerns">Enter health concerns</string>
    <string name="optional">optional...</string>
    <string name="start_exercises">Start Exercises</string>
    <string name="height_errMssg">Height attribute cannot be empty and must be a number greater than 0</string>
    <string name="weight_errMssg">Weight attribute cannot be empty and must be a number greater than 0</string>
    <string name="heart_beat_errMssg">Heart beat must be a number greater than 0</string>
    <string name="start_exercise_message">We ask you complete the following exercises.
        Press the start Button when ready</string>
    <string name="start">Start</string>
    <string name="enter_heart_rate_mssg">Perform the exercise then enter your heart rate in BPM</string>
    <string name="portfolio_added">Portfolio Added!</string>
    <string name="heart_beats_per_minute">Heart Beats Per Minute</string>
    <string name="results_insert_msg"> Fitness results added!</string>
    <string name="add_fitness_results">Add Fitness Results</string>
    <string name="exercise">Exercise:</string>
    <string name="reps">Reps:</string>
    <string name="hearts_beats_pm">Hearts Beats PM:</string>
    <string name="fittness_result_title">Fitness Results</string>
    <string name="select_trainer_plan">Select Trainer for Plan</string>
    <string name="training_plan_submitted">Training Plan Submitted!</string>
    <string name='training_plan_submit_err'>Error submitting training Plan</string>
    <string name='exercise_desc'>Exercise Description</string>
    <string-array name="covid_questions">
        <item>I do not have a cough</item>
        <item>I have not been experencing headaches</item>
        <item>I have not been exposed</item>

    </string-array>
    <string name="title_activity_my_classes">MyClassesActivity</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_email">Email</string>
    <string name="hint_phone">Phone number</string>
    <string name="add_portfolio">Add Portfolio</string>
    <string name="start_date">Start Date:</string>
    <string name="get_description">Get Description</string>


</resources>