<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

       <item android:id="@+id/home_fragment"
           android:icon="@drawable/ic_home"
           android:title="@string/tab_home"/>
        <item android:id="@+id/fitness_port_id"
              android:icon="@drawable/ic_fitness_portfolio_icon"
              android:title="@string/fitness_portfolio"/>

    </group>

    <item android:title="@string/fitness_classes"
        >
        <menu>
            <item
                android:id="@+id/inPerson_fragment"
                android:icon="@drawable/ic_in_person_bike"
                android:title="@string/tab_inperson"/>
            <item
                android:id="@+id/online_fragment"
                android:icon="@drawable/ic_digitial"
                android:title="@string/tab_online"/>
        </menu>
    </item>

    <item
        android:id="@+id/log_out"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"/>

</menu>