<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:id="@+id/height_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:id="@+id/height_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_height_cm"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/height_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="15dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/weight_layout"
            android:layout_below="@id/height_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:id="@+id/weight_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/enter_weight_lbs"
                />

            <EditText
                android:id="@+id/weight_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="15dp"

                />
        </LinearLayout>

        <TextView
            android:id="@+id/health_concerns_title_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_layout"
            android:textStyle="bold"
            android:text="@string/enter_health_concerns"
            android:layout_margin="8dp"
            />
        <EditText
            android:id="@+id/health_concerns_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/health_concerns_title_ID"
            android:layout_margin="8dp"
            android:inputType="textMultiLine"
            android:hint="@string/optional"/>
        <Button
            android:id="@+id/start_buttonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_below="@id/health_concerns_input"
            android:text="@string/submit"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>

