<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/exercise_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/exercise_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
    />
    </LinearLayout>
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rep_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/rep_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/heartBeat_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hearts_beats_pm"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/hbp_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            />
    </LinearLayout>
</LinearLayout>