<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.example.senfit.uiHelpers.DateTimeFormatHelper"/>
        <variable
            name="portfolio"
            type="com.example.senfit.dataContext.entities.FitnessPortfolio" />
        <variable
            name="listener"
            type="com.example.senfit.fitnessPortfolio.PortfolioAdapter.OnResultClickListener" />
    </data>
    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/date_createdID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@{DateTimeFormatHelper.formatDate(portfolio.dateCreated)}"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
            <TextView
                android:id="@+id/height_title"
                android:text="@string/height"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{portfolio.height+" cm"}'/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/weight_title"
                    android:text="@string/weight"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/weight"
                    android:text='@{portfolio.weight+" lbs"}'
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_concerns"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/health_concernsID"
                android:layout_width="wrap_content"
                android:text="@{portfolio.healthConcerns}"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:padding="16dp"
                android:text="@string/see_results"
                android:onClick="@{()->listener.resultsSelected(portfolio)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
